--- a/index.html
+++ b/index.html
@@ -417,17 +417,8 @@
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>   
-        <div class="container">
-            <nav>
-                <ul id="sidemenubottom">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#project">Projects</a></li>
-                    <li><a href="#contactmefooter">Contact</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-                </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-            </nav>
+        <div class="containerbottom">
+            <a href="#header">Home</a>
         </div> 
     </div> 
 
