--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="mainbox">
             <div class="box1">
                 <div class="developer">
-                    <div class="web">Frontend Developer</div>
+                    <div class="web">Full Stack Developer</div>
                     <div class="web">Software Developer</div>
                 </div>    
                <div class="myname">
@@ -418,7 +418,8 @@
             </a>
         </div>   
         <div class="containerbottom">
-            <a href="#header">Home</a>
+            <a href="#header">Home
+            </a>
         </div> 
     </div> 
 
