--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                             <ul class="lang">
                                 <li>React</li>
                                 <li>Django</li>
+                                <li>REST Framework</li>
                                 <li>Bootstrap</li>
                                 <li>Tailwind</li>
                                 <li>CSS3</li>
