--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                             <ul class="lang">
                                 <li>React</li>
                                 <li>Django</li>
-                                <li>REST Framework</li>
                                 <li>Bootstrap</li>
                                 <li>Tailwind</li>
                                 <li>CSS3</li>
                                 <li>HTML5</li>
                                 <li>Linux</li>
                                 <li>AWS</li>
+                                <li>REST</li>
                             </ul>
                             <li class="heading1">TOOLS AND SOFTWARE</li>
                             <ul class="lang">
